src/Draw/Draw_PluginMacro.hxx
@@ -16,10 +16,13 @@
 #ifndef _Draw_PluginMacro_HeaderFile
 #define _Draw_PluginMacro_HeaderFile
 
+#ifdef OCCT_NO_PLUGINS
+#define DPLUGIN(name)
+#else
 #define DPLUGIN(name) \
-extern "C" {Standard_EXPORT void PLUGINFACTORY(Draw_Interpretor&);} \
-void  PLUGINFACTORY(Draw_Interpretor& theDI) { \
-        name::Factory(theDI);} \
-\
+extern "C" Standard_EXPORT void PLUGINFACTORY(Draw_Interpretor& theDI) { \
+  name::Factory(theDI); \
+}
+#endif
 
 #endif
